--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="http://twitter.com/coolderp01" class="fa-twitter">Twitter</a></li>
+								<li><a href="https://www.youtube.com/channel/UCTlXTulStsFv2N34RVe93RA" class="fa-youtube-play">Youtube</a></li>
 							</ul>
 						</footer>
 						<iframe src="https://discordapp.com/widget?id=282802010380697601&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
