--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta property="og:title" content="Octagon" />
 		<meta property="og:url" content="http://cocktagon.gq" />
-		<meta property="og:image" content="images/octa.png" />
+		<meta property="og:image" content="http://cocktagon.gq/images/octa.png" />
 		<meta property="og:image:type" content="image/png" />
 		<meta property="og:description" content="Autismo" />
 	</head>
