--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 								<li><a href="https://www.youtube.com/channel/UCTlXTulStsFv2N34RVe93RA" class="fa-youtube-play">Youtube</a></li>
 							</ul>
 						</footer>
+						<h1>Music</h1>
+						<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/7459884&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+						<h1>Discord</h1>
 						<iframe src="https://discordapp.com/widget?id=282802010380697601&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
 						
 					</section>
